--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
   © 2017-2019 Cotes Chung
   MIT License
 -->
-
+<!--
 <footer class="d-flex w-100 justify-content-center">
   <div class="d-flex justify-content-between align-items-center">
     <div class="footer-left">
@@ -29,5 +29,6 @@
       </p>
     </div>
 
-  </div> <!-- div.d-flex -->
+  </div> 
+--> <!-- div.d-flex -->
 </footer>
