--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,4 +31,12 @@
 
   </div> 
 --> <!-- div.d-flex -->
+<div class="footer-right">
+  <p class="mb-0">
+    <script src="https://tryhackme.com/badge/151617"></script>
+  </p>
+  <p class="mb-0">
+    <script src="https://www.hackthebox.eu/badge/61547"></script>
+  </p>
+</div>
 </footer>
