--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,13 +30,17 @@
     </div>
 
   </div> 
---> <!-- div.d-flex -->
-<div class="footer-right">
-  <p class="mb-0">
-    <script src="https://www.hackthebox.eu/badge/61547"></script>
-  </p>
-  <p class="mb-0">
-    <script src="https://tryhackme.com/badge/151617"></script>
-  </p>
-</div>
+--> 
+<footer class="d-flex w-100 justify-content-center">
+  <div class="d-flex justify-content-between align-items-center">
+    <div class="footer-right">
+      <p class="mb-0">
+        <script src="https://www.hackthebox.eu/badge/61547"></script>
+      </p>
+      <p class="mb-0">
+        <script src="https://tryhackme.com/badge/151617"></script>
+      </p>
+    </div>
+  </div>
+<!-- div.d-flex -->
 </footer>
