--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,10 +35,10 @@
   <div class="d-flex justify-content-between align-items-center">
     <div class="footer-right">
       <p class="mb-0">
-        <script src="https://www.hackthebox.eu/badge/61547"></script>
+        <a href="https://www.hackthebox.eu/home/users/profile/61547" target="_blank"><script src="https://www.hackthebox.eu/badge/61547"></script></a>
       </p>
       <p class="mb-0">
-        <script src="https://tryhackme.com/badge/151617"></script>
+        <a href="https://tryhackme.com/p/twoot" target="_blank"><script src="https://tryhackme.com/badge/151617"></script></a>
       </p>
     </div>
   </div>
