--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme" content="{{ site.data.meta.name }} v{{ site.data.meta.version }}">
+  <meta name="theme" content="{{ site.data.meta.name }} {{ site.data.meta.version }}">
 
   {% seo title=false %}
 
@@ -61,7 +61,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
 
-  <script defer
+  <script async
     src="https://cdn.jsdelivr.net/combine/npm/popper.js@1.15.0,npm/bootstrap@4/dist/js/bootstrap.min.js"></script>
 
   {% include js-selector.html %}
