--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -10,25 +10,33 @@
 
   <div class="access">
 
-  {% include update-list.html %}
+  {% if site.data.updates %}
 
-  {% if update_list.size > 0 %}
+    {% include update-list.html %}
+
+    {% if update_list.size > 0 %}
 
     <div id="access-lastmod" class="post">
       <span>{{- site.data.label.panel.lastmod -}}</span>
       <ul class="post-content pl-0 pb-1 ml-1 mt-2">
 
       {% for item in update_list %}
-        {% assign index = item | split: "::" | last | plus: 0 %}
-        {% assign post = site.posts[index] %}
-        {% assign url = post.url | relative_url %}
-        <li><a href="{{ url }}">{{ post.title }}</a></li>
+        {% assign post_url = item | split: "::" | last | url_encode | prepend: "/posts/" | append: "/" %}
+        {% assign post = site.posts | where: "url", post_url | first %}
+
+        {% if post %}
+          {% assign url = post.url | relative_url %}
+          <li><a href="{{ url }}">{{ post.title }}</a></li>
+        {% endif %}
+
       {% endfor %}
 
       </ul>
-    </div> <!-- #access-lastmod -->
+    </div><!-- #access-lastmod -->
 
-  {% endif %}
+    {% endif %}
+
+  {% endif %} <!-- site.data.updates -->
 
   {% include trending-tags.html %}
 
@@ -36,10 +44,10 @@
     <div id="access-tags">
       <span>{{- site.data.label.panel.trending_tags -}}</span>
       <div class="d-flex flex-wrap mt-3 mb-1 mr-3">
-
-      {% for tag_name in trending_tags %}
-        {% assign url = tag_name | slugify | url_encode | prepend: "/tags/" | append: "/" %}
-        <a class="post-tag" href="{{ url | relative_url }}">{{ tag_name }}</a>
+      
+      {% for tag in trending_tags %}
+        {% capture url %}/tags/{{ tag | downcase | url_encode }}/{% endcapture %}
+        <a class="post-tag" href="{{ url | relative_url }}">{{ tag | replace: '-', ' ' }}</a>
       {% endfor %}
 
       </div>
@@ -47,13 +55,13 @@
   {% endif %}
   </div> <!-- .access -->
 
-  {% if include.toc %}
-    <div id="toc-wrapper" class="pl-0 pr-4 mb-5">
-      <span class="pl-3 pt-2 mb-2">
+  {% if page.layout == 'post' and site.toc and page.toc %}
+  <div id="toc-wrapper" class="pl-0 pr-4 mb-5">
+    <span class="pl-3 pt-2 mb-2">
       {{- site.data.label.panel.toc -}}
-      </span>
-      <nav id="toc" data-toggle="toc"></nav>
-    </div>
+    </span>
+    <nav id="toc" data-toggle="toc"></nav>
+  </div>
   {% endif %}
 
 </div> <!-- #panel-wrapper -->
